--- a/app/src/main/res/layout/activity_hot_100.xml
+++ b/app/src/main/res/layout/activity_hot_100.xml
@@ -17,25 +17,21 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
+    <TextView
+            android:text="@string/drafts_remaining"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/draftsRemainingText"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textSize="26sp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:id="@+id/linearLayout">
-
-        <TextView
-                android:text="@string/tunes_remaining"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/tunesRemainingText"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-black"
-                android:gravity="end" />
-    </LinearLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/scrollView"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center" />
 
     <ScrollView
             android:layout_width="match_parent"
@@ -48,7 +44,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="32dp"
-            android:id="@+id/scrollView2">
+            android:id="@+id/scrollView">
 
         <LinearLayout
                 android:layout_width="match_parent"
