--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -12,16 +12,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/inventoryText"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-smallcaps"
-            android:textSize="26sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/scrollView"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textSize="26sp" />
 
     <ScrollView
             android:layout_width="match_parent"
