--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFF</color>
     <color name="song_info_bg">#505050</color>
     <color name="draft_button_bg">#1C1C1C</color>
+    <color name="drafts_remaining_bg">#505050</color>
 </resources>
