--- a/app/src/main/res/layout/activity_squad.xml
+++ b/app/src/main/res/layout/activity_squad.xml
@@ -5,13 +5,13 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".InventoryActivity">
+        tools:context=".SquadActivity">
 
     <TextView
-            android:text="@string/inventory_text"
+            android:text="@string/squad_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/inventoryText"
+            android:id="@+id/squadText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/scrollView"
@@ -39,6 +39,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/inventoryLayout" />
+                android:id="@+id/squadLayout" />
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
