--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFF</color>
-    <color name="song_info_bg">#505050</color>
-    <color name="draft_button_bg">#1C1C1C</color>
+
     <color name="drafts_remaining_text_bg">#505050</color>
+    <color name="chart_song_element_bg">#505050</color>
+    <color name="draft_button_bg">#1C1C1C</color>
+
     <color name="squad_text_bg">#505050</color>
+    <color name="squad_song_element_bg">#505050</color>
+    <color name="release_button_bg">#1C1C1C</color>
 </resources>
