--- a/app/src/main/res/values/app_settings.xml
+++ b/app/src/main/res/values/app_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="max_song_chars">20</integer>
+    <string name="data_url">https://raw.githubusercontent.com/mhollingshead/billboard-hot-100/main/recent.json</string>
+    <integer name="max_tune_chars">12</integer>
     <integer name="max_artist_chars">20</integer>
     <integer name="max_squad_size">11</integer>
 </resources>
