--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,11 @@
     <color name="white">#FFF</color>
 
     <color name="drafts_remaining_text_bg">#505050</color>
-    <color name="chart_song_element_bg">#505050</color>
-    <color name="draft_button_bg">#1C1C1C</color>
+    <color name="chart_tune_element_bg">#505050</color>
+    <color name="hot_100_rank_color">#B5A416</color>
+    <color name="draft_button_bg">#4CAF50</color>
 
     <color name="squad_text_bg">#505050</color>
-    <color name="squad_song_element_bg">#505050</color>
-    <color name="release_button_bg">#1C1C1C</color>
+    <color name="squad_tune_element_bg">#505050</color>
+    <color name="release_button_bg">#4CAF50</color>
 </resources>
