--- a/app/src/main/res/layout/activity_squad.xml
+++ b/app/src/main/res/layout/activity_squad.xml
@@ -39,6 +39,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/squadLayout" />
+                android:id="@+id/squadList" />
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
