--- a/app/src/main/res/layout/activity_hot_100.xml
+++ b/app/src/main/res/layout/activity_hot_100.xml
@@ -55,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/tuneList" />
+                android:id="@+id/chartList" />
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
