--- a/app/src/main/res/layout/activity_hot_100.xml
+++ b/app/src/main/res/layout/activity_hot_100.xml
@@ -11,11 +11,13 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
+            android:id="@+id/chartProgressBar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible"
+            tools:visibility="invisible" />
 
     <RelativeLayout
             android:layout_width="match_parent"
@@ -26,16 +28,35 @@
             android:id="@+id/topBar"
             app:layout_constraintBottom_toTopOf="@+id/scrollView">
 
-        <TextView
-                android:text="@string/tune_drafts_text"
+        <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tuneDraftsText"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textSize="26sp"
+                android:id="@+id/headerLayout"
+                android:gravity="center"
+                android:background="@drawable/tune_drafts_text_bg"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:gravity="center" />
+                android:layout_marginEnd="16dp">
+
+            <TextView
+                    android:text="@string/tune_drafts_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tuneDraftsText"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:textSize="22sp"
+                    android:layout_marginEnd="16dp" />
+
+            <TextView
+                    android:text="@string/squad_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/squadText"
+                    android:textSize="22sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_marginStart="16dp" />
+        </LinearLayout>
+
     </RelativeLayout>
 
     <ScrollView
@@ -55,7 +76,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/chartList" />
+                android:id="@+id/chartList"
+                android:gravity="center" />
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
