Add functionality to daily tune draft button & fix double click bug

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFF</color>
 
-    <color name="drafts_remaining_text_bg">#505050</color>
-    <color name="chart_tune_element_bg">#505050</color>
-    <color name="hot_100_rank_color">#B5A416</color>
+    <!-- General -->
+    <!-- Draft Button -->
     <color name="draft_button_enabled_bg">#56A559</color>
     <color name="draft_button_enabled_text">#FFFFFF</color>
     <color name="draft_button_disabled_bg">#BF959595</color>
-    <color name="draft_button_disabled_text">#000000</color>
+    <color name="draft_button_disabled_text">#515151</color>
+    <!-- End Draft Button -->
+    <!-- End General -->
 
+    <!-- Hot 100 Activity -->
+    <color name="drafts_remaining_text_bg">#505050</color>
+    <color name="chart_tune_element_bg">#505050</color>
+    <color name="hot_100_rank_color">#B5A416</color>
+    <!-- End Hot 100 Activity -->
+
+    <!-- Squad Activity -->
     <color name="squad_text_bg">#505050</color>
     <color name="squad_tune_element_bg">#505050</color>
     <color name="release_button_bg">#4CAF50</color>
+    <!-- End Squad Activity -->
 
+    <!-- Daily Tune Activity -->
     <color name="daily_tune_element_bg">#505050</color>
+    <!-- End Daily Tune Activity -->
+
 </resources>
