--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,71 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteY="246dp"
+            tools:layout_editor_absoluteX="128dp"
+            android:gravity="center">
+
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:gravity="center">
+
+            <Button
+                    android:text="@string/billboard_hot_100_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/billboardHot100Button"
+                    android:backgroundTint="#D6A511" />
+
+            <Button
+                    android:text="@string/squad_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/inventoryButton"
+                    android:backgroundTint="#00BCD4" />
+
+            <Button
+                    android:text="@string/daily_tune_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dailyTuneButton"
+                    android:backgroundTint="#4CAF50" />
+        </TableRow>
+
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+            <Button
+                    android:text="Add Draft"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/addDraftsButton"
+                    android:backgroundTint="#FF5722" />
+
+            <Button
+                    android:text="Clear Data"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/clearDataButton"
+                    android:backgroundTint="#B64A42" />
+        </TableRow>
+
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center" />
+
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center" />
+    </TableLayout>
+
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
@@ -16,40 +81,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:gravity="center">
-
-        <Button
-                android:text="Clear Data"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/clearDataButton"
-                android:backgroundTint="#8BC34A" />
-
-        <Button
-                android:text="Add Draft"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/addDraftsButton"
-                android:backgroundTint="#FF5722" />
-
-        <Button
-                android:text="@string/billboard_hot_100_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/billboardHot100Button"
-                android:backgroundTint="#FFC107" />
-
-        <Button
-                android:text="@string/squad_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/inventoryButton"
-                android:backgroundTint="#00BCD4" />
-
-        <Button
-                android:text="@string/daily_tune_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/dailyTuneButton" />
 
     </LinearLayout>
 
